prevent course title in search from being cut off

--- a/static/scss/course-carousel.scss
+++ b/static/scss/course-carousel.scss
@@ -6,7 +6,7 @@
   }
 
   .slider-list {
-    max-height: 365px;
+    max-height: 385px;
   }
 
   .title {
